apps/base/sparkyfitness/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sparkyfitness
  labels:
    app.kubernetes.io/name: sparkyfitness
    app.kubernetes.io/part-of: homelab-apps
