apps/base/sparkyfitness/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sparkyfitness-frontend
  namespace: sparkyfitness
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sparkyfitness-frontend
  template:
    metadata:
      labels:
        app: sparkyfitness-frontend
        app.kubernetes.io/name: sparkyfitness
        app.kubernetes.io/component: frontend
    spec:
      enableServiceLinks: false
      containers:
        - name: frontend
          # renovate: datasource=docker depName=codewithcj/sparkyfitness versioning=semver
          image: docker.io/codewithcj/sparkyfitness:v0.16.6.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
