apps/base/sparkyfitness/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sparkyfitness-server
  namespace: sparkyfitness
spec:
  selector:
    app: sparkyfitness-server
  ports:
    - name: http
      port: 3010
      targetPort: http
      protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: sparkyfitness
  namespace: sparkyfitness
spec:
  selector:
    app: sparkyfitness-frontend
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  type: ClusterIP
